# Fornacast

./: .dockerignore  .env.example  .formatter.exs  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mix.exs  package-lock.json
.github/workflows/: ci.yml  e2e.yml  release.yml  test.yml
.superpowers/sdd/: progress.md
apps/forge_accounts/: .gitignore  README.md  mix.exs
apps/forge_accounts/lib/: forge_accounts.ex
apps/forge_accounts/test/: api_key_test.exs  forge_accounts_test.exs  test_helper.exs
apps/forge_repos/: .gitignore  README.md  mix.exs
apps/forge_repos/lib/: forge_repos.ex
apps/forge_repos/test/: access_test.exs  forge_repos_test.exs
apps/fornacast/: .gitignore  README.md  mix.exs
apps/fornacast/lib/: fornacast.ex
apps/fornacast/test/: fornacast_boot_test.exs  fornacast_config_store_test.exs  fornacast_setup_test.exs  fornacast_test.exs
apps/fornacast_api/: mix.exs
apps/fornacast_api/lib/: fornacast_api.ex
apps/fornacast_api/test/: authentication_test.exs  endpoint_test.exs  openapi_contract_test.exs  proxy_contract_test.exs  rate_limit_test.exs  (+4 more)
apps/fornacast_web/: .gitignore  README.md  mix.exs  package.json
apps/git_core/: .gitignore  README.md  mix.exs
apps/git_core/native/fornacast_git_core/: Cargo.toml
apps/git_core/native/fornacast_git_core/src/: bounded_blob.rs  lib.rs
apps/git_transport/: .gitignore  README.md  mix.exs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/nginx/: fornacast.conf
scripts/: api_proxy_smoke.sh  prune_github_openapi.exs  repository_qa_fixture.exs
(+145 files in other folders)
