[package]
name = "fornacast_git_core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "fornacast_git_core"
crate-type = ["cdylib"]

[dependencies]
gix = "0.85.0"
gix-features = "0.48.1"
gix-hash = "0.25.1"
gix-object = "0.62.0"
gix-pack = "0.72.0"
gix-quote = "0.7.2"
gix-ref = "0.65.0"
rustler = "0.38.0"
